[project]
name = "katara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa",
    "cv",
    "numpy",

]

[tool.uv]
constraint-dependencies = ["llvm>0.43.0"]

keywords = []

[project.urls]
Homepage = "https://pypi.org/project/katara/"
Repository = "https://github.com/kelechi-c/katara"

[tool.setuptools.packages.find]
where =["."]
include = ["katara*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["katara"]

[project.scripts]
